fix(md): fix wraping

--- a/dashboard/src/style/style.scss
+++ b/dashboard/src/style/style.scss
@@ -242,10 +242,6 @@ blockquote{
 
 .wizard { height:100%; overflow: scroll; }
 
-.md {display:grid;
-  //max-height: 300px;
-  height: 100%;
-   overflow: scroll;}
 
 @import "./navbar";
 @import "./loader";
